--- a/packages/flutter_tools/gradle/flutter.gradle
+++ b/packages/flutter_tools/gradle/flutter.gradle
@@ -235,6 +235,10 @@ class FlutterPlugin implements Plugin<Project> {
         if (project.hasProperty('extra-gen-snapshot-options')) {
             extraGenSnapshotOptionsValue = project.property('extra-gen-snapshot-options')
         }
+        Boolean preferSharedLibraryValue = false
+        if (project.hasProperty('prefer-shared-library')) {
+            preferSharedLibraryValue = project.property('prefer-shared-library')
+        }
 
         project.android.applicationVariants.all { variant ->
             String flutterBuildMode = buildModeFor(variant.buildType)
@@ -253,6 +257,7 @@ class FlutterPlugin implements Plugin<Project> {
                 localEngineSrcPath this.localEngineSrcPath
                 targetPath target
                 previewDart2 previewDart2Value
+                preferSharedLibrary preferSharedLibraryValue
                 sourceDir project.file(project.flutter.source)
                 intermediateDir project.file("${project.buildDir}/${AndroidProject.FD_INTERMEDIATES}/flutter/${variant.name}")
             }
@@ -266,6 +271,7 @@ class FlutterPlugin implements Plugin<Project> {
                 localEngineSrcPath this.localEngineSrcPath
                 targetPath target
                 previewDart2 previewDart2Value
+                preferSharedLibrary preferSharedLibraryValue
                 sourceDir project.file(project.flutter.source)
                 intermediateDir project.file("${project.buildDir}/${AndroidProject.FD_INTERMEDIATES}/flutter/${variant.name}")
                 extraFrontEndOptions extraFrontEndOptionsValue
@@ -298,6 +304,8 @@ abstract class BaseFlutterTask extends DefaultTask {
     String targetPath
     @Optional @Input
     Boolean previewDart2
+    @Optional
+    Boolean preferSharedLibrary
     File sourceDir
     File intermediateDir
     @Optional @Input
@@ -342,6 +350,9 @@ abstract class BaseFlutterTask extends DefaultTask {
                 }
                 if (extraGenSnapshotOptions != null) {
                   args "--extra-gen-snapshot-options", "${extraGenSnapshotOptions}"
+                }
+                if (preferSharedLibrary) {
+                    args "--prefer-shared-library"
                 }
                 args "--${buildMode}"
             }
@@ -395,6 +406,10 @@ class FlutterTask extends BaseFlutterTask {
 	     from "${intermediateDir}/app.flx"
 	     from "${intermediateDir}/snapshot_blob.bin"
             if (buildMode != 'debug') {
+                // Although we have either the *.so file or the other files, we
+                // can still list all of them and only the existing ones will be
+                // copied :-/
+                from "${intermediateDir}/app.so"
                 from "${intermediateDir}/vm_snapshot_data"
                 from "${intermediateDir}/vm_snapshot_instr"
                 from "${intermediateDir}/isolate_snapshot_data"
