--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -125,7 +125,7 @@ linter:
     # - prefer_interpolation_to_compose_strings # not yet tested
     - prefer_is_empty
     - prefer_is_not_empty
-    # - prefer_single_quote_strings # not yet tested
+    - prefer_single_quotes
     # - public_member_api_docs # this is the only difference from analysis_options_repo.yaml
     - recursive_getters
     - slash_for_doc_comments
