--- a/analysis_options_repo.yaml
+++ b/analysis_options_repo.yaml
@@ -107,7 +107,7 @@ linter:
     - prefer_collection_literals
     - prefer_conditional_assignment
     - prefer_const_constructors
-    # - prefer_const_constructors_in_immutables # not yet tested
+    - prefer_const_constructors_in_immutables
     # - prefer_constructors_over_static_methods # not yet tested
     - prefer_contains
     # - prefer_expression_function_bodies # conflicts with https://github.com/flutter/flutter/wiki/Style-guide-for-Flutter-repo#consider-using--for-short-functions-and-methods
