--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -111,7 +111,7 @@ linter:
     - prefer_adjacent_string_concatenation
     # - prefer_asserts_in_initializer_lists # not yet tested
     - prefer_collection_literals
-    # - prefer_conditional_assignment # not yet tested
+    - prefer_conditional_assignment
     - prefer_const_constructors
     # - prefer_const_constructors_in_immutables # not yet tested
     # - prefer_constructors_over_static_methods # not yet tested
