--- a/packages/flutter_driver/pubspec.yaml
+++ b/packages/flutter_driver/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
-  test: 0.12.24+8
+  test: 0.12.26
   mockito: 2.2.0
   quiver: 0.25.0
 
@@ -41,8 +41,9 @@ dev_dependencies:
   http: 0.11.3+14 # TRANSITIVE DEPENDENCY
   http_multi_server: 2.0.4 # TRANSITIVE DEPENDENCY
   http_parser: 3.1.1 # TRANSITIVE DEPENDENCY
-  intl: 0.15.1 # TRANSITIVE DEPENDENCY
-  intl_translation: 0.15.0 # TRANSITIVE DEPENDENCY
+  intl: 0.15.2 # TRANSITIVE DEPENDENCY
+  intl_translation: 0.16.0 # TRANSITIVE DEPENDENCY
+  io: 0.3.0 # TRANSITIVE DEPENDENCY
   isolate: 1.1.0 # TRANSITIVE DEPENDENCY
   js: 0.6.1 # TRANSITIVE DEPENDENCY
   logging: 0.11.3+1 # TRANSITIVE DEPENDENCY
@@ -56,12 +57,12 @@ dev_dependencies:
   pub_semver: 1.3.2 # TRANSITIVE DEPENDENCY
   shelf: 0.7.0 # TRANSITIVE DEPENDENCY
   shelf_packages_handler: 1.0.3 # TRANSITIVE DEPENDENCY
-  shelf_static: 0.2.5 # TRANSITIVE DEPENDENCY
+  shelf_static: 0.2.6 # TRANSITIVE DEPENDENCY
   shelf_web_socket: 0.2.2 # TRANSITIVE DEPENDENCY
   source_map_stack_trace: 1.1.4 # TRANSITIVE DEPENDENCY
   source_maps: 0.10.4 # TRANSITIVE DEPENDENCY
   source_span: 1.4.0 # TRANSITIVE DEPENDENCY
-  stack_trace: 1.8.2 # TRANSITIVE DEPENDENCY
+  stack_trace: 1.8.3 # TRANSITIVE DEPENDENCY
   stream_channel: 1.6.2 # TRANSITIVE DEPENDENCY
   string_scanner: 1.0.2 # TRANSITIVE DEPENDENCY
   term_glyph: 1.0.0 # TRANSITIVE DEPENDENCY
