enable lint avoid_classes_with_only_static_members

--- a/analysis_options_repo.yaml
+++ b/analysis_options_repo.yaml
@@ -73,7 +73,7 @@ linter:
     - avoid_as
     # - avoid_catches_without_on_clauses # we do this commonly
     # - avoid_catching_errors # we do this commonly
-    # - avoid_classes_with_only_static_members # not yet tested
+    - avoid_classes_with_only_static_members
     - avoid_function_literals_in_foreach_calls
     - avoid_init_to_null
     - avoid_null_checks_in_equality_operators
