--- a/examples/catalog/pubspec.yaml
+++ b/examples/catalog/pubspec.yaml
@@ -4,6 +4,7 @@ dependencies:
   flutter:
     sdk: flutter
   path: 1.4.2
+  material_icons_font: ^0.1.1
 
 dev_dependencies:
   flutter_test:
@@ -43,6 +44,3 @@ dev_dependencies:
   vector_math: 2.0.5 # TRANSITIVE DEPENDENCY
   watcher: 0.9.7+4 # TRANSITIVE DEPENDENCY
   yaml: 2.1.13 # TRANSITIVE DEPENDENCY
-
-flutter:
-  uses-material-design: true
