--- a/examples/flutter_view/pubspec.yaml
+++ b/examples/flutter_view/pubspec.yaml
@@ -4,6 +4,7 @@ description: A new flutter project.
 dependencies:
   flutter:
     sdk: flutter
+  material_icons_font: ^0.1.1
 
   args: 0.13.7 # TRANSITIVE DEPENDENCY
   async: 1.13.3 # TRANSITIVE DEPENDENCY
@@ -40,6 +41,5 @@ dependencies:
   yaml: 2.1.13 # TRANSITIVE DEPENDENCY
 
 flutter:
-  uses-material-design: true
   assets:
     - assets/flutter-mark-square-64.png
