--- a/examples/layers/pubspec.yaml
+++ b/examples/layers/pubspec.yaml
@@ -2,6 +2,7 @@ name: flutter_examples_layers
 dependencies:
   flutter:
     sdk: flutter
+  material_icons_font: ^0.1.1
 
 dev_dependencies:
   flutter_test:
@@ -44,4 +45,3 @@ dev_dependencies:
 flutter:
   assets:
     - services/data.json
-  uses-material-design: true
