--- a/examples/platform_channel_swift/pubspec.yaml
+++ b/examples/platform_channel_swift/pubspec.yaml
@@ -3,6 +3,7 @@ name: platform_channel_swift
 dependencies:
   flutter:
     sdk: flutter
+  material_icons_font: ^0.1.1
 
 dev_dependencies:
   flutter_test:
@@ -43,6 +44,3 @@ dev_dependencies:
   vector_math: 2.0.5 # TRANSITIVE DEPENDENCY
   watcher: 0.9.7+4 # TRANSITIVE DEPENDENCY
   yaml: 2.1.13 # TRANSITIVE DEPENDENCY
-
-flutter:
-  uses-material-design: true
