enable lint prefer_asserts_in_initializer_lists

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -109,7 +109,7 @@ linter:
     - package_prefixed_library_names
     # - parameter_assignments # we do this commonly
     - prefer_adjacent_string_concatenation
-    # - prefer_asserts_in_initializer_lists # not yet tested
+    - prefer_asserts_in_initializer_lists
     - prefer_collection_literals
     - prefer_conditional_assignment
     - prefer_const_constructors
