--- a/packages/flutter_test/pubspec.yaml
+++ b/packages/flutter_test/pubspec.yaml
@@ -6,7 +6,7 @@ dependencies:
   # We depend on very specific internal implementation details of the
   # 'test' package, which change between versions, so when upgrading
   # this, make sure the tests are still running correctly.
-  test: 0.12.24+8
+  test: 0.12.26
 
   # We use FakeAsync and other testing utilities.
   quiver: 0.25.0
@@ -17,7 +17,7 @@ dependencies:
   # We import stack_trace because the test packages uses it and we
   # need to be able to unmangle the stack traces that it passed to
   # stack_trace. See https://github.com/dart-lang/test/issues/590
-  stack_trace: 1.8.2
+  stack_trace: 1.8.3
 
   # We override the createHttpClient in flutter with a MockClient.
   http: 0.11.3+14
@@ -30,35 +30,27 @@ dependencies:
   barback: 0.15.2+13 # TRANSITIVE DEPENDENCY
   boolean_selector: 1.0.2 # TRANSITIVE DEPENDENCY
   charcode: 1.1.1 # TRANSITIVE DEPENDENCY
-  cli_util: 0.1.2+1 # TRANSITIVE DEPENDENCY
   collection: 1.14.3 # TRANSITIVE DEPENDENCY
   convert: 2.0.1 # TRANSITIVE DEPENDENCY
   crypto: 2.0.2+1 # TRANSITIVE DEPENDENCY
-  csslib: 0.14.1 # TRANSITIVE DEPENDENCY
-  dart_style: 1.0.8 # TRANSITIVE DEPENDENCY
   glob: 1.1.5 # TRANSITIVE DEPENDENCY
-  html: 0.13.2 # TRANSITIVE DEPENDENCY
   http_multi_server: 2.0.4 # TRANSITIVE DEPENDENCY
   http_parser: 3.1.1 # TRANSITIVE DEPENDENCY
-  intl: 0.15.1 # TRANSITIVE DEPENDENCY
-  intl_translation: 0.15.0 # TRANSITIVE DEPENDENCY
-  isolate: 1.1.0 # TRANSITIVE DEPENDENCY
+  io: 0.3.0 # TRANSITIVE DEPENDENCY
   js: 0.6.1 # TRANSITIVE DEPENDENCY
-  logging: 0.11.3+1 # TRANSITIVE DEPENDENCY
   matcher: 0.12.1+4 # TRANSITIVE DEPENDENCY
   meta: 1.1.1 # TRANSITIVE DEPENDENCY
   mime: 0.9.3 # TRANSITIVE DEPENDENCY
+  mockito: 2.2.0 # TRANSITIVE DEPENDENCY
   node_preamble: 1.4.0 # TRANSITIVE DEPENDENCY
   package_config: 1.0.3 # TRANSITIVE DEPENDENCY
   package_resolver: 1.0.2 # TRANSITIVE DEPENDENCY
   path: 1.4.2 # TRANSITIVE DEPENDENCY
-  petitparser: 1.6.1 # TRANSITIVE DEPENDENCY
-  plugin: 0.2.0+2 # TRANSITIVE DEPENDENCY
   pool: 1.3.3 # TRANSITIVE DEPENDENCY
   pub_semver: 1.3.2 # TRANSITIVE DEPENDENCY
   shelf: 0.7.0 # TRANSITIVE DEPENDENCY
   shelf_packages_handler: 1.0.3 # TRANSITIVE DEPENDENCY
-  shelf_static: 0.2.5 # TRANSITIVE DEPENDENCY
+  shelf_static: 0.2.6 # TRANSITIVE DEPENDENCY
   shelf_web_socket: 0.2.2 # TRANSITIVE DEPENDENCY
   source_map_stack_trace: 1.1.4 # TRANSITIVE DEPENDENCY
   source_maps: 0.10.4 # TRANSITIVE DEPENDENCY
@@ -67,7 +59,5 @@ dependencies:
   string_scanner: 1.0.2 # TRANSITIVE DEPENDENCY
   term_glyph: 1.0.0 # TRANSITIVE DEPENDENCY
   typed_data: 1.1.4 # TRANSITIVE DEPENDENCY
-  utf: 0.9.0+3 # TRANSITIVE DEPENDENCY
-  watcher: 0.9.7+4 # TRANSITIVE DEPENDENCY
   web_socket_channel: 1.0.6 # TRANSITIVE DEPENDENCY
   yaml: 2.1.13 # TRANSITIVE DEPENDENCY
