--- a/examples/flutter_gallery/pubspec.yaml
+++ b/examples/flutter_gallery/pubspec.yaml
@@ -6,12 +6,13 @@ dependencies:
   intl: 0.15.2
   string_scanner: 1.0.2
   url_launcher: 0.4.2+5
+  cupertino_icons: 0.1.1
 
   # Also update dev/benchmarks/complex_layout/pubspec.yaml
   flutter_gallery_assets:
     git:
       url: https://flutter.googlesource.com/gallery-assets
-      ref: 0b6cdb29b24ecc60781c2828086d955dacdc0152
+      ref: 6427f36af1bdb2fffaeda1c46d5e52d7b636c93d
 
 dev_dependencies:
   flutter_test:
@@ -137,6 +138,8 @@ flutter:
     - packages/flutter_gallery_assets/shrine/vendors/peter-carlsson.png
     - packages/flutter_gallery_assets/shrine/vendors/sandra-adams.jpg
     - packages/flutter_gallery_assets/shrine/vendors/zach.jpg
+    - packages/flutter_gallery_assets/cupertino_navigation/person1.jpg
+    - packages/flutter_gallery_assets/cupertino_navigation/person2.jpg
   fonts:
     - family: Raleway
       fonts:
