delay taking screenshot to allow GPU thread to render the frame

--- a/dev/integration_tests/ui/pubspec.yaml
+++ b/dev/integration_tests/ui/pubspec.yaml
@@ -2,6 +2,7 @@ name: integration_ui
 description: Flutter non-plugin UI integration tests.
 
 dependencies:
+  image: 1.1.29
   flutter:
     sdk: flutter
   flutter_driver:
