--- a/packages/.gitignore
+++ b/packages/.gitignore
@@ -1,12 +1,2 @@
-.DS_Store
-.buildlog
-.idea
-.packages
-.pub/
-linked_*.ds
-unlinked.ds
-unlinked_spec.ds
-build/
-packages
-pubspec.lock
-.atom/
+# API Documentation output
+doc/api/
