--- a/analysis_options_repo.yaml
+++ b/analysis_options_repo.yaml
@@ -80,7 +80,7 @@ linter:
     # - avoid_positional_boolean_parameters # not yet tested
     - avoid_return_types_on_setters
     # - avoid_returning_null # we do this commonly
-    - avoid_returning_this
+    # - avoid_returning_this # https://github.com/dart-lang/linter/issues/842
     # - avoid_setters_without_getters # not yet tested
     # - avoid_types_on_closure_parameters # conflicts with always_specify_types
     - await_only_futures
