--- a/dev/devicelab/manifest.yaml
+++ b/dev/devicelab/manifest.yaml
@@ -71,6 +71,13 @@ tasks:
     stage: devicelab
     required_agent_capabilities: ["has-android-device"]
 
+  external_ui_integration_test:
+    description: >
+      Checks that external UIs work on Android.
+    stage: devicelab
+    required_agent_capabilities: ["has-android-device"]
+    flaky: true
+
   platform_interaction_test:
     description: >
       Checks platform interaction on Android.
