--- a/packages/flutter_tools/pubspec.yaml
+++ b/packages/flutter_tools/pubspec.yaml
@@ -13,20 +13,20 @@ dependencies:
   cli_util: 0.1.2+1
   coverage: 0.9.3
   crypto: 2.0.2+1
-  file: 2.3.4
+  file: 2.3.5
   http: 0.11.3+14
   intl: 0.15.2
   json_rpc_2: 2.0.4
   json_schema: 1.0.6
-  linter: 0.1.38
+  linter: 0.1.39
   meta: 1.1.1
-  mustache: 0.2.5+1
+  mustache: 1.0.0
   package_config: 1.0.3
   platform: 2.1.1
   plugin: 0.2.0+2
   process: 2.0.6
-  quiver: 0.26.0
-  stack_trace: 1.9.0
+  quiver: 0.26.2
+  stack_trace: 1.9.1
   stream_channel: 1.6.2
   usage: 3.3.0
   vm_service_client: 0.2.3
@@ -37,7 +37,7 @@ dependencies:
   # We depend on very specific internal implementation details of the
   # 'test' package, which change between versions, so when upgrading
   # this, make sure the tests are still running correctly.
-  test: 0.12.26
+  test: 0.12.28
 
   # Version from the vended Dart SDK as defined in `dependency_overrides`.
   analyzer: any
@@ -45,7 +45,7 @@ dependencies:
 
 dev_dependencies:
   collection: 1.14.3
-  mockito: 2.2.0
+  mockito: 2.2.1
 
   async: 1.13.3 # TRANSITIVE DEPENDENCY
   barback: 0.15.2+13 # TRANSITIVE DEPENDENCY
@@ -65,7 +65,7 @@ dev_dependencies:
   mime: 0.9.4 # TRANSITIVE DEPENDENCY
   node_preamble: 1.4.0 # TRANSITIVE DEPENDENCY
   package_resolver: 1.0.2 # TRANSITIVE DEPENDENCY
-  path: 1.4.2 # TRANSITIVE DEPENDENCY
+  path: 1.5.1 # TRANSITIVE DEPENDENCY
   petitparser: 1.6.1 # TRANSITIVE DEPENDENCY
   pool: 1.3.3 # TRANSITIVE DEPENDENCY
   pub_semver: 1.3.2 # TRANSITIVE DEPENDENCY
