Consolidate .gitignores in the top level even more.

--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,81 @@
-# IDEA/Android Studio project
+# Miscellaneous
+*.lock
+*.log
+*.pyc
+*.swp
+.DS_Store
+.atom/
+.buildlog/
+.history
+.svn/
+
+# IntelliJ related
 *.iml
 *.ipr
 *.iws
 .idea/
 
-# Visual Studio project
+# Visual Studio Code related
 .vscode/
 
-# Atom project
-.atom/
+# Flutter repo-specific
+/bin/cache/
+/dev/benchmarks/mega_gallery/
+/dev/bots/.recipe_deps
+/dev/bots/android_tools/
+/dev/docs/doc/
+/dev/docs/lib/
+/packages/flutter/coverage/
 
-# Pub and build outputs
-.buildlog/
+# Flutter/Dart/Pub related
+**/doc/api/
+.flutter-plugins
 .packages
 .pub/
 build/
-packages/
-.flutter-plugins
-pubspec.lock
+flutter_*.png
+linked_*.ds
+pubspec.yaml
 unlinked.ds
 unlinked_spec.ds
 
-*.pyc
-.history
+# Android related
+**/android/**/GeneratedPluginRegistrant.java
+**/android/**/gradle-wrapper.jar
+**/android/.gradle
+**/android/captures/
+**/android/gradlew
+**/android/gradlew.bat
+**/android/local.properties
 
-# macOS cached data
-.DS_Store
-*.iml
+# iOS/XCode related
+**/ios/**/*.mode1v3
+**/ios/**/*.mode2v3
+**/ios/**/*.moved-aside
+**/ios/**/*.pbxuser
+**/ios/**/*.perspectivev3
+**/ios/**/*sync/
+**/ios/**/.sconsign.dblite
+**/ios/**/.tags*
+**/ios/**/.vagrant/
+**/ios/**/DerivedData/
+**/ios/**/GeneratedPluginRegistrant.h
+**/ios/**/GeneratedPluginRegistrant.m
+**/ios/**/Icon?
+**/ios/**/Pods/
+**/ios/**/profile
+**/ios/**/xcuserdata
+**/ios/.generated/
+**/ios/Flutter/App.framework
+**/ios/Flutter/Flutter.framework
+**/ios/Flutter/Generated.xcconfig
+**/ios/Flutter/app.flx
+**/ios/Flutter/app.zip
+**/ios/ServiceDefinitions.json
+
+# Exceptions to above rules.
+!**/ios/**/default.mode1v3
+!**/ios/**/default.mode2v3
+!**/ios/**/default.pbxuser
+!**/ios/**/default.perspectivev3
+!/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
