rename the tool to vitool (vector icon tool)

--- a/dev/tools/vitool/pubspec.yaml
+++ b/dev/tools/vitool/pubspec.yaml
@@ -1,4 +1,4 @@
-name: aatool
+name: vitool
 description: A tool for generating Dart vector animation code from SVG sequences.
 version: 0.0.1
 homepage: https://flutter.io
