--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ unlinked_spec.ds
 
 # Android related
 **/android/**/gradle-wrapper.jar
+**/android/**/bin/
 **/android/.gradle
 **/android/captures/
 **/android/gradlew
