--- a/dev/integration_tests/flavors/android/app/build.gradle
+++ b/dev/integration_tests/flavors/android/app/build.gradle
@@ -36,7 +36,7 @@ android {
             signingConfig signingConfigs.debug
         }
     }
-    
+
     aaptOptions {
         // TODO(goderbauer): remove when https://github.com/flutter/flutter/issues/8986 is resolved.
         if(System.getenv("FLUTTER_CI_WIN")) {
@@ -44,6 +44,8 @@ android {
             cruncherEnabled false
         }
     }
+
+    flavorDimensions "mode"
 
     productFlavors {
         free {}
