--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,15 @@ env:
   - SHARD=analyze
   - SHARD=tests
   - SHARD=docs
+  - SHARD=build_and_deploy_gallery
 matrix:
   exclude:
   - os: osx
     env: SHARD=analyze
   - os: osx
     env: SHARD=docs
+  allow_failures:
+  - env: SHARD=build_and_deploy_gallery
 sudo: false
 filter_secrets: false
 
@@ -31,6 +34,7 @@ git:
   # We rely on git tags for determining the version.
   depth: false
 cache:
+  bundler: true
   directories:
     - $HOME/.pub-cache
 install:
@@ -41,4 +45,4 @@ before_script:
   - ./dev/bots/travis_setup.sh
 script:
   - ulimit -S -n 2048 # https://github.com/flutter/flutter/issues/2976
-  - (./bin/cache/dart-sdk/bin/dart ./dev/bots/test.dart && ./dev/bots/travis_upload.sh)
+  - ./dev/bots/travis_script.sh
