--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ matrix:
     env: SHARD=analyze
   - os: osx
     env: SHARD=docs
+  # TODO(xster): remove this when we know it works on Travis.
   allow_failures:
   - env: SHARD=build_and_deploy_gallery
 sudo: false
