--- a/examples/flutter_gallery/android/app/build.gradle
+++ b/examples/flutter_gallery/android/app/build.gradle
@@ -14,9 +14,9 @@ if (flutterRoot == null) {
 def flutterVersion = file("$flutterRoot/version").text
 def flutterVersionComponents = flutterVersion.split(/[^0-9]+/)
 // Let the integer version code of xx.yy.zz-pre.nnn be xxyyzznnn.
-int flutterVersionCode = Math.min(flutterVersionComponents[0].toInteger(), 99) * 10000000
-flutterVersionCode += Math.min(flutterVersionComponents[1].toInteger(), 99) * 100000
-flutterVersionCode += Math.min(flutterVersionComponents[2].toInteger(), 99) * 1000
+int flutterVersionCode = Math.min(flutterVersionComponents[0].toInteger(), 20) * 100000000
+flutterVersionCode += Math.min(flutterVersionComponents[1].toInteger(), 99) * 1000000
+flutterVersionCode += Math.min(flutterVersionComponents[2].toInteger(), 999) * 1000
 flutterVersionCode += Math.min(flutterVersionComponents[3]?.toInteger() ?: 0, 999)
 
 apply plugin: 'com.android.application'
