--- a/dev/bots/pubspec.yaml
+++ b/dev/bots/pubspec.yaml
@@ -3,7 +3,7 @@ description: Scripts which run on bots.
 
 dependencies:
   path: 1.5.1
-  args: 1.2.0
+  args: 1.3.0
   process: 2.0.7
   platform: 2.1.1
 
@@ -27,7 +27,7 @@ dev_dependencies:
   http_multi_server: 2.0.4 # TRANSITIVE DEPENDENCY
   http_parser: 3.1.1 # TRANSITIVE DEPENDENCY
   intl: 0.15.2 # TRANSITIVE DEPENDENCY
-  io: 0.3.1 # TRANSITIVE DEPENDENCY
+  io: 0.3.2+1 # TRANSITIVE DEPENDENCY
   isolate: 1.1.0 # TRANSITIVE DEPENDENCY
   js: 0.6.1 # TRANSITIVE DEPENDENCY
   logging: 0.11.3+1 # TRANSITIVE DEPENDENCY
