--- a/examples/flutter_gallery/pubspec.yaml
+++ b/examples/flutter_gallery/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   cupertino_icons: 0.1.2
   video_player: 0.7.2
   shared_preferences: 0.4.3
+  share: 0.5.3
 
   # Also update dev/benchmarks/complex_layout/pubspec.yaml
   flutter_gallery_assets: 0.1.7
