Revert "Just remove the SDK constraints entirely"
It turns out that the comments in the pubspec.yaml files are still
correct; pub assumes SDK version ^1.0.0 if it doesn't see an SDK
constraint.  Since we want Dart 2.0, we need to keep the SDK
constraints.

This reverts commit d4c034f1f3ef88d1d6cf66cba716f95b521a70b5.

--- a/dev/devicelab/pubspec.yaml
+++ b/dev/devicelab/pubspec.yaml
@@ -3,6 +3,10 @@ author: Flutter Authors <flutter-dev@googlegroups.com>
 description: Flutter continuous integration performance and correctness tests.
 homepage: https://github.com/flutter/flutter
 
+environment:
+  # The pub client defaults to an <2.0.0 sdk constraint which we need to explicitly overwrite.
+  sdk: ">=2.1.0-dev.5.0 <3.0.0"
+
 dependencies:
   args: 1.5.1
   file: 5.0.6
