--- a/packages/flutter_tools/pubspec.yaml
+++ b/packages/flutter_tools/pubspec.yaml
@@ -3,6 +3,10 @@ description: Tools for building Flutter applications
 homepage: https://flutter.io
 author: Flutter Authors <flutter-dev@googlegroups.com>
 
+environment:
+  # The pub client defaults to an <2.0.0 sdk constraint which we need to explicitly overwrite.
+  sdk: ">=2.1.0-dev.5.0 <3.0.0"
+
 dependencies:
   # To update these, use "flutter update-packages --force-upgrade".
   analyzer: 0.33.3
