analysis_options_userl.yaml move

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -2,6 +2,9 @@ include: packages/flutter_analysis_options/lib/analysis_options.yaml
 
 analyzer:
   errors:
+    # Ignore analyzer hints for updating pubspecs when using Future or
+    # Stream and not importing dart:async
+    # Please see https://github.com/flutter/flutter/pull/24528 for details.
     sdk_version_async_exported_from_core: ignore
   exclude:
     - 'bin/cache/**'
