--- a/packages/flutter_analysis_options/lib/analysis_options.yaml
+++ b/packages/flutter_analysis_options/lib/analysis_options.yaml
@@ -11,26 +11,23 @@
 # which should be kept in sync with this file:
 #
 #   - analysis_options.yaml (this file)
-#   - packages/flutter/lib/analysis_options_user.yaml
+#   - packages/flutter/lib/analysis_options_analysis_options_base.yaml
 #   - https://github.com/flutter/plugins/blob/master/analysis_options.yaml
 #   - https://github.com/flutter/engine/blob/master/analysis_options.yaml
 #
 # This file contains the analysis options used by Flutter tools, such as IntelliJ,
 # Android Studio, and the `flutter analyze` command.
 
+include: analysis_options_base.yaml
+
 analyzer:
   strong-mode:
     implicit-dynamic: false
   errors:
-    # treat missing required parameters as a warning (not a hint)
-    missing_required_param: warning
     # treat missing returns as a warning (not a hint)
     missing_return: warning
     # allow having TODOs in the code
     todo: ignore
-    # Ignore analyzer hints for updating pubspecs when using Future or
-    # Stream and not importing dart:async
-    # Please see https://github.com/flutter/flutter/pull/24528 for details.
 
 linter:
   rules:
@@ -50,18 +47,18 @@ linter:
     # - avoid_catching_errors # we do this commonly
     - avoid_classes_with_only_static_members
     # - avoid_double_and_int_checks # only useful when targeting JS runtime
-    - avoid_empty_else
+    # - avoid_empty_else # specified in analysis_options_base.yaml
     - avoid_field_initializers_in_const_classes
     - avoid_function_literals_in_foreach_calls
     # - avoid_implementing_value_types # not yet tested
-    - avoid_init_to_null
+    # - avoid_init_to_null # specified in analysis_options_base.yaml
     # - avoid_js_rounded_ints # only useful when targeting JS runtime
     - avoid_null_checks_in_equality_operators
     # - avoid_positional_boolean_parameters # not yet tested
     # - avoid_private_typedef_functions # we prefer having typedef (discussion in https://github.com/flutter/flutter/pull/16356)
     - avoid_relative_lib_imports
     - avoid_renaming_method_parameters
-    - avoid_return_types_on_setters
+    # - avoid_return_types_on_setters # specified in analysis_options_base.yaml
     # - avoid_returning_null # there are plenty of valid reasons to return null
     # - avoid_returning_null_for_future # not yet tested
     - avoid_returning_null_for_void
@@ -74,42 +71,42 @@ linter:
     # - avoid_types_on_closure_parameters # conflicts with always_specify_types
     - avoid_unused_constructor_parameters
     - avoid_void_async
-    - await_only_futures
-    - camel_case_types
-    - cancel_subscriptions
+    # - await_only_futures # specified in analysis_options_base.yaml
+    # - camel_case_types # specified in analysis_options_base.yaml
+    # - cancel_subscriptions # specified in analysis_options_base.yaml
     # - cascade_invocations # not yet tested
     # - close_sinks # not reliable enough
     # - comment_references # blocked on https://github.com/flutter/flutter/issues/20765
     # - constant_identifier_names # needs an opt-out https://github.com/dart-lang/linter/issues/204
-    - control_flow_in_finally
+    # - control_flow_in_finally # specified in analysis_options_base.yaml
     # - curly_braces_in_flow_control_structures # not yet tested
     - directives_ordering
     - empty_catches
-    - empty_constructor_bodies
-    - empty_statements
+    # - empty_constructor_bodies # specified in analysis_options_base.yaml
+    # - empty_statements # specified in analysis_options_base.yaml
     # - file_names # not yet tested
     - flutter_style_todos
-    - hash_and_equals
-    - implementation_imports
+    # - hash_and_equals # specified in analysis_options_base.yaml
+    # - implementation_imports # specified in analysis_options_base.yaml
     # - invariant_booleans # too many false positives: https://github.com/dart-lang/linter/issues/811
     - iterable_contains_unrelated_type
     # - join_return_with_assignment # not yet tested
-    - library_names
+    # - library_names # specified in analysis_options_base.yaml
     - library_prefixes
     # - lines_longer_than_80_chars # not yet tested
     - list_remove_unrelated_type
     # - literal_only_boolean_expressions # too many false positives: https://github.com/dart-lang/sdk/issues/34181
     - no_adjacent_strings_in_list
     - no_duplicate_case_values
-    - non_constant_identifier_names
+    # - non_constant_identifier_names # specified in analysis_options_base.yaml
     # - null_closures  # not yet tested
     # - omit_local_variable_types # opposite of always_specify_types
     # - one_member_abstracts # too many false positives
     # - only_throw_errors # https://github.com/flutter/flutter/issues/5792
     - overridden_fields
-    - package_api_docs
-    - package_names
-    - package_prefixed_library_names
+    # - package_api_docs # specified in analysis_options_base.yaml
+    # - package_names # specified in analysis_options_base.yaml
+    # - package_prefixed_library_names # specified in analysis_options_base.yaml
     # - parameter_assignments # we do this commonly
     - prefer_adjacent_string_concatenation
     - prefer_asserts_in_initializer_lists
@@ -132,7 +129,7 @@ linter:
     # - prefer_int_literals # not yet tested
     # - prefer_interpolation_to_compose_strings # not yet tested
     - prefer_is_empty
-    - prefer_is_not_empty
+    # - prefer_is_not_empty # specified in analysis_options_base.yaml
     - prefer_iterable_whereType
     # - prefer_mixin # https://github.com/dart-lang/language/issues/32
     - prefer_single_quotes
@@ -140,33 +137,33 @@ linter:
     - prefer_void_to_null
     # - public_member_api_docs # enabled on a case-by-case basis; see e.g. packages/analysis_options.yaml
     - recursive_getters
-    - slash_for_doc_comments
+    # - slash_for_doc_comments # specified in analysis_options_base.yaml
     - sort_constructors_first
     - sort_pub_dependencies
     - sort_unnamed_constructors_first
-    - super_goes_last
-    - test_types_in_equals
+    # - super_goes_last # specified in analysis_options_base.yaml
+    # - test_types_in_equals # specified in analysis_options_base.yaml
     - throw_in_finally
     # - type_annotate_public_apis # subset of always_specify_types
-    - type_init_formals
+    # - type_init_formals # specified in analysis_options_base.yaml
     # - unawaited_futures # too many false positives
     # - unnecessary_await_in_return # not yet tested
-    - unnecessary_brace_in_string_interps
+    # - unnecessary_brace_in_string_interps # specified in analysis_options_base.yaml
     - unnecessary_const
-    - unnecessary_getters_setters
+    # - unnecessary_getters_setters # specified in analysis_options_base.yaml
     # - unnecessary_lambdas # has false positives: https://github.com/dart-lang/linter/issues/498
     - unnecessary_new
     - unnecessary_null_aware_assignments
     - unnecessary_null_in_if_null_operators
     - unnecessary_overrides
     - unnecessary_parenthesis
-    - unnecessary_statements
+    # - unnecessary_statements # specified in analysis_options_base.yaml
     - unnecessary_this
-    - unrelated_type_equality_checks
+    # - unrelated_type_equality_checks # specified in analysis_options_base.yaml
     # - use_function_type_syntax_for_parameters # not yet tested
     - use_rethrow_when_possible
     # - use_setters_to_change_properties # not yet tested
     # - use_string_buffers # has false positives: https://github.com/dart-lang/sdk/issues/34182
     # - use_to_and_as_if_applicable # has false positives, so we prefer to catch this by code-review
-    - valid_regexps
+    # - valid_regexps # specified in analysis_options_base.yaml
     # - void_checks # not yet tested
