add readme, update description

--- a/packages/flutter_analysis_options/pubspec.yaml
+++ b/packages/flutter_analysis_options/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_analysis_options
 author: Flutter Authors <flutter-dev@googlegroups.com>
-description: The base analysis options for the Flutter project
+description: The base and strict analysis options for the Flutter project.
 homepage: http://flutter.io
 
 version: 1.0.0
