--- a/packages/flutter/lib/analysis_options_user.yaml
+++ b/packages/flutter/lib/analysis_options_user.yaml
@@ -1,1 +1,1 @@
-include: ../../flutter_analysis_options/lib/analysis_options_base.yaml
+include: package:flutter_analysis_options/analysis_options_base.yaml
