[openpay] Create an OpenPay benchmark
TODO:

1. Fix the repo checkout location.
2. Is there anything else that is needed to make it post to skia-perf.
2. IS there a better way to structure this to enable [ios, android] x
   [impeller, skia] variants.

--- a/.ci.yaml
+++ b/.ci.yaml
@@ -2251,6 +2251,18 @@ targets:
         ["devicelab", "android", "linux"]
       task_name: android_lifecycles_test
 
+  - name: Linux_android openpay_benchmarks__scroll_perf
+    bringup: true
+    recipe: devicelab/devicelab_drone
+    presubmit: false
+    timeout: 60
+    properties:
+      openpay: true
+      tags: >
+        ["devicelab", "android", "linux", "openpay"]
+      task_name: openpay_benchmarks__scroll_perf
+    scheduler: luci
+
   - name: Staging_build_linux analyze
     presubmit: false
     bringup: true
